# Data-Structures-and-Algorithms

./: 10_bst.c  2_linked_list.c  5_expression_parsing.c  6_queue.c  7_binary_search.c  8_sort.c  9_hash_table.c  CMakeLists.txt  README.md  array.c  info_mem_faults.md  library.h  linked_list.c  primer.c  primer.md  stack_as_array.c  stack_as_linked_list.c  static.md
